Fixed services cards being visible before animation

--- a/src/Components/ServicesMainPage/ServicesMainPage.css
+++ b/src/Components/ServicesMainPage/ServicesMainPage.css
@@ -54,13 +54,13 @@
     flex-direction: column;
     /* outline: 1.8px solid #e7e7e7; */
     align-items: flex-start;
-    opacity: 1;
+    opacity: 0;
     overflow: hidden;
     border-radius: 5px;
     cursor: default;
     background-color: white;
-    transition: 0.2s;
-    transition-delay: 0.15;
+    /* transition: 0.2s;
+    transition-delay: 0.15; */
     grid-auto-rows: auto;
     box-shadow: 0 0 2.5em -1em black;
 }
@@ -171,26 +171,26 @@
     }
 }
 
-
 /* ----------- */
 
 @keyframes fadeInDownCustom {
     from {
-      opacity: 0;
-      transform: translate3d(0, -30%, 0);
+        opacity: 0;
+        transform: translate3d(0, -30%, 0);
     }
-  
+
     to {
-      opacity: 1;
-      transform: translate3d(0, 0, 0);
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
     }
-  }
-  
-  .fadeInDownCustom {
+}
+
+.fadeInDownCustom {
     animation-name: fadeInDownCustom;
     opacity: 1;
-  }
+    animation-fill-mode: forwards;
+}
 
-  .op {
-      opacity: 0;
-  }
+.op {
+    opacity: 0;
+}
